--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+<link rel="stylesheet" type="text/css" href="css/main.css" />
 
 <head>
   <title>Changing font colors</title>
